[gd_scene load_steps=22 format=3 uid="uid://b23d61k0qabq0"]

[ext_resource type="Script" path="res://addons/ui-anim-framework/gui/components/animations/animation_creator.gd" id="1_asyqv"]
[ext_resource type="PackedScene" uid="uid://bp8oqgph1ih14" path="res://addons/ui-anim-framework/gui/components/animations/sub_components/ease_curve_visualiser.tscn" id="2_8hb1o"]
[ext_resource type="Texture2D" uid="uid://cbk7b0my0yit6" path="res://addons/ui-anim-framework/gui/icons/tools/reparent_down_icon.png" id="3_eehmw"]
[ext_resource type="Texture2D" uid="uid://b7xfh6clmgw2m" path="res://addons/ui-anim-framework/gui/icons/tools/reparent_up_icon.png" id="4_bxis2"]
[ext_resource type="Texture2D" uid="uid://cl2mbi8d2jjr0" path="res://addons/ui-anim-framework/gui/icons/tools/cancel_icon.png" id="4_hwqf3"]
[ext_resource type="Texture2D" uid="uid://dvers8l8w2kul" path="res://addons/ui-anim-framework/gui/icons/tools/select_up_icon.png" id="4_x2ct4"]
[ext_resource type="Texture2D" uid="uid://cvxpft4dkv45o" path="res://addons/ui-anim-framework/gui/icons/gdaction/action_icon.png" id="5_jtpys"]
[ext_resource type="Texture2D" uid="uid://cx088m8x6loav" path="res://addons/ui-anim-framework/gui/icons/tools/delete_icon.png" id="6_2ndn5"]
[ext_resource type="Texture2D" uid="uid://cmnb1ybli47d3" path="res://addons/ui-anim-framework/gui/icons/gdaction/controlflow_icon.png" id="6_3uyoa"]
[ext_resource type="Texture2D" uid="uid://c4x2663h2pi71" path="res://addons/ui-anim-framework/gui/icons/gdaction/chaining_icon.png" id="7_s5wcf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c0q14"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5r84o"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m1wl1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3s1a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lge4d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbpba"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b7hhj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ebh8r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s0h5g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qjlt6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4h7r3"]

[node name="AnimationCreator" type="MarginContainer"]
offset_right = 447.0
offset_bottom = 230.0
theme_override_constants/margin_bottom = 4
script = ExtResource("1_asyqv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="CurrentlySelectedInterface" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="CurrentSelectedTitleLabel" type="Label" parent="HBoxContainer/VBoxContainer/CurrentlySelectedInterface"]
layout_mode = 2
text = "Currently Selected Animation: "

[node name="CurrentSelectedLabel" type="Label" parent="HBoxContainer/VBoxContainer/CurrentlySelectedInterface"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.886275, 0.576471, 0, 1)
text = "None"
vertical_alignment = 1

[node name="AnimationToolsInterface" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="AnimationTreeInterface" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface"]
layout_mode = 2
alignment = 1

[node name="ExpandSeparator" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="ControlToolsPanel" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer"]
layout_mode = 2

[node name="MoveTools" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/ControlToolsPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="MoveUpButton" type="Button" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/ControlToolsPanel/MoveTools"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c0q14")
theme_override_styles/hover = SubResource("StyleBoxFlat_5r84o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m1wl1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3s1a")
icon = ExtResource("4_bxis2")
icon_alignment = 1

[node name="MoveDownButton" type="Button" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/ControlToolsPanel/MoveTools"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c0q14")
theme_override_styles/hover = SubResource("StyleBoxFlat_5r84o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m1wl1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3s1a")
icon = ExtResource("3_eehmw")
icon_alignment = 1

[node name="CancelToolPanel" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/CancelToolPanel"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="CancelMoveButton" type="Button" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/CancelToolPanel"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c0q14")
theme_override_styles/hover = SubResource("StyleBoxFlat_5r84o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m1wl1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3s1a")
icon = ExtResource("4_hwqf3")
icon_alignment = 1

[node name="MoveDirectionIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/CancelToolPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_x2ct4")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="FixedSpacer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AnimationTree" type="Tree" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/parent_hl_line_color = Color(1, 1, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_lge4d")
allow_reselect = true
hide_folding = true

[node name="CreateToolsPanel" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="AddActionButton" type="Button" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/CreateToolsPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c0q14")
theme_override_styles/hover = SubResource("StyleBoxFlat_5r84o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gbpba")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b7hhj")
icon = ExtResource("5_jtpys")

[node name="AddControlflowButton" type="Button" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/CreateToolsPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c0q14")
theme_override_styles/hover = SubResource("StyleBoxFlat_5r84o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m1wl1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3s1a")
icon = ExtResource("6_3uyoa")

[node name="AddChainingButton" type="Button" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/CreateToolsPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c0q14")
theme_override_styles/hover = SubResource("StyleBoxFlat_5r84o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebh8r")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s0h5g")
icon = ExtResource("7_s5wcf")

[node name="DeleteGDButton" type="Button" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/CreateToolsPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c0q14")
theme_override_styles/hover = SubResource("StyleBoxFlat_5r84o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m1wl1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3s1a")
icon = ExtResource("6_2ndn5")

[node name="InstructionsInterface" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="InstructionsLabel" type="Label" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/InstructionsInterface"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Select a new parent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmReparentButton" type="Button" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/InstructionsInterface"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_qjlt6")
text = "Confirm"

[node name="FixedSpacer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/InstructionsInterface"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PropertiesInterface" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface"]
unique_name_in_owner = true
layout_mode = 2

[node name="ControlsInterface" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface"]
unique_name_in_owner = true
layout_mode = 2

[node name="MainSettings" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/ControlsInterface"]
unique_name_in_owner = true
layout_mode = 2

[node name="GDATypeLabel" type="Label" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/ControlsInterface/MainSettings"]
layout_mode = 2
text = "Type"

[node name="GDATypeButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/ControlsInterface/MainSettings"]
layout_mode = 2

[node name="PropertyTypeInterface" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PropertyOptionsButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="NoPropertyInterface" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="NoPropertyLabel" type="Label" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/NoPropertyInterface"]
layout_mode = 2
text = "No Property Selected"

[node name="DelayInterface" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SpeedInterface" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CurveInterface" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="EasingInterface" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="EaseCurveVisualiser" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface" instance=ExtResource("2_8hb1o")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="EasingControls" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="EasingValueTitleLabel" type="Label" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface/EasingControls"]
layout_mode = 2
text = "Easing Value"

[node name="EasingValueSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface/EasingControls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -5.0
max_value = 5.0
step = 0.2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface/EasingControls"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="EasingPresetsLabel" type="Label" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface/EasingControls/HBoxContainer2"]
layout_mode = 2
text = "Presets"

[node name="EasingPresetsButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface/EasingControls/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_4h7r3")
item_count = 10
selected = 0
popup/item_0/text = "Linear"
popup/item_0/id = 0
popup/item_1/text = "EaseInSine"
popup/item_1/id = 1
popup/item_2/text = "EaseOutSine"
popup/item_2/id = 2
popup/item_3/text = "EaseInOutSine"
popup/item_3/id = 3
popup/item_4/text = "EaseInCubic"
popup/item_4/id = 4
popup/item_5/text = "EaseOutCubic"
popup/item_5/id = 5
popup/item_6/text = "EaseInOutCubic"
popup/item_6/id = 6
popup/item_7/text = "EaseInQuint"
popup/item_7/id = 7
popup/item_8/text = "EaseOutQuint"
popup/item_8/id = 8
popup/item_9/text = "EaseInOutQuint"
popup/item_9/id = 9

[node name="ExpandSeparator" type="MarginContainer" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface"]
layout_mode = 2
size_flags_vertical = 3

[node name="ToolOptionsButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
item_count = 2
selected = 0
popup/item_0/text = "Controls"
popup/item_0/id = 0
popup/item_1/text = "Property"
popup/item_1/id = 1

[connection signal="pressed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/ControlToolsPanel/MoveTools/MoveUpButton" to="." method="_on_move_up_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/ControlToolsPanel/MoveTools/MoveDownButton" to="." method="_on_move_down_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer/CancelToolPanel/CancelMoveButton" to="." method="_on_cancel_move_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/AnimationTree" to="." method="_on_animation_tree_item_selected"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/CreateToolsPanel/AddActionButton" to="." method="_on_add_action_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/CreateToolsPanel/AddControlflowButton" to="." method="_on_add_controlflow_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/CreateToolsPanel/AddChainingButton" to="." method="_on_add_chaining_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/AnimationTreeInterface/VBoxContainer2/CreateToolsPanel/DeleteGDButton" to="." method="_on_delete_gd_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/InstructionsInterface/ConfirmReparentButton" to="." method="_on_confirm_reparent_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/PropertyOptionsButton" to="." method="_on_property_options_button_item_selected"]
[connection signal="drag_ended" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface/EasingControls/EasingValueSlider" to="." method="_on_easing_value_slider_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface/EasingControls/EasingValueSlider" to="." method="_on_easing_value_slider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/PropertyTypeInterface/HBoxContainer/EasingInterface/EasingControls/HBoxContainer2/EasingPresetsButton" to="." method="_on_easing_presets_button_item_selected"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/AnimationToolsInterface/PropertiesInterface/ToolOptionsButton" to="." method="_on_tool_options_button_item_selected"]
